--- a/action.yml
+++ b/action.yml
@@ -13,4 +13,8 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   env:
-    CONTEXT: ${{ inputs.issue_context }}
+    action: ${{ inputs.action }}
+    # created_at: ${{ inputs.issue_context }}
+    # updated_at: ${{ inputs.issue_context }}
+    # login: ${{ inputs.issue_context }}
+    # body: ${{ inputs.issue_context }}
